<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_marginTop="95dp"
        android:layout_height="200dp"
        android:textSize="35dp"
        tools:ignore="MissingConstraints" />



    <RelativeLayout
        android:id = "@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text1"
        android:layout_marginTop="15dp"
        tools:ignore="InvalidId">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/btn1"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:background="@color/teal"
                android:text="@string/btn1" />
            <Button
                android:id="@+id/btn2"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="110dp"
                android:background="@color/teal"
                android:text="@string/btn2" />
            <Button
                android:id="@+id/btn3"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="200dp"
                android:background="@color/teal"
                android:text="@string/btn3" />
            <Button
                android:id="@+id/btnadd"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="290dp"
                android:background="@color/teal"
                android:text="@string/btnadd" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/btn4"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:background="@color/teal"
                android:text="@string/btn4" />
            <Button
                android:id="@+id/btn5"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="110dp"
                android:background="@color/teal"
                android:text="@string/btn5" />
            <Button
                android:id="@+id/btn6"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="200dp"
                android:background="@color/teal"
                android:text="@string/btn6" />
            <Button
                android:id="@+id/btnsub"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="290dp"
                android:background="@color/teal"
                android:text="@string/btnsub" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/btn7"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:background="@color/teal"
                android:text="@string/btn7" />
            <Button
                android:id="@+id/btn8"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="110dp"
                android:background="@color/teal"
                android:text="@string/btn8" />
            <Button
                android:id="@+id/btn9"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="200dp"
                android:background="@color/teal"
                android:text="@string/btn9" />
            <Button
                android:id="@+id/btnmul"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="290dp"
                android:background="@color/teal"
                android:text="@string/btnmul" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="225dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/btndot"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:background="@color/teal"
                android:text="@string/btndot" />
            <Button
                android:id="@+id/btn0"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="110dp"
                android:background="@color/teal"
                android:text="@string/btn0" />
            <Button
                android:id="@+id/btnclear"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="200dp"
                android:background="@color/teal"
                android:text="@string/btnclear" />
            <Button
                android:id="@+id/btndiv"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginLeft="290dp"
                android:background="@color/teal"
                android:text="@string/btndiv" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/btnequal"
                android:layout_width="345dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:background="@color/teal"
                android:text="@string/btnequal" />

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>